--- a/QRCodeUIKitResource/zh-Hans.lproj/Localizable.strings
+++ b/QRCodeUIKitResource/zh-Hans.lproj/Localizable.strings
@@ -6,5 +6,8 @@
   Copyright © 2018年 Zero Status. All rights reserved.
 */
 "Scan" = "扫一扫";
+"ScanTip" = "请将二维码放入框内";
+"Your device has no torch." = "您的设备不支持闪光灯。";
+"unknown qrcode"="无法识别的二维码";
 "Scan Result" = "扫描结果";
 "PressCopyTip" = "*长按虚线框，复制扫描结果。";
