--- a/QRCodeUIKitResource/en.lproj/Localizable.strings
+++ b/QRCodeUIKitResource/en.lproj/Localizable.strings
@@ -6,5 +6,8 @@
   Copyright © 2018年 Zero Status. All rights reserved.
 */
 "Scan" = "Scan";
+"ScanTip" = "Put QRCode in ScanRect";
+"Your device has no torch." = "Your device has no torch.";
+"unknown qrcode"="Unknown QRCode";
 "Scan Result" = "Scan Result";
 "PressCopyTip" = "*Long press dotted box, copy scan results to Pasteboard.";
