1.支持放弃扫描结果并继续扫描2.支持自定义未识别的扫描结果提示文本3.新增单独条码扫描(QuickBarCodeScanController)支持

--- a/QRCodeUIKitBundle/en.lproj/Localizable.strings
+++ b/QRCodeUIKitBundle/en.lproj/Localizable.strings
@@ -7,7 +7,9 @@
 */
 "Scan" = "Scan";
 "ScanTip" = "Put QRCode in ScanRect";
+"BarCodeScanTip" = "Put BarCode in ScanRect";
 "Your device has no torch." = "Your device has no torch.";
 "unknown qrcode"="Unknown QRCode";
+"unknown barcode"="Unknown BarCode";
 "Scan Result" = "Scan Result";
 "PressCopyTip" = "*Long press dotted box, copy scan results to Pasteboard.";
