--- a/QRCodeUIKitBundle/en.lproj/Localizable.strings
+++ b/QRCodeUIKitBundle/en.lproj/Localizable.strings
@@ -13,3 +13,15 @@
 "unknown barcode"="Unknown BarCode";
 "Scan Result" = "Scan Result";
 "PressCopyTip" = "*Long press dotted box, copy scan results to Pasteboard.";
+
+
+"StartScanAccessTitle" = "Start Your Scan";
+"StartScanAccessDesc" = "Allow access to scan qr or barcode information through your camera, and also identify qr or barcode images from the album.";
+"CameraNotSupport" = "Camera not support for your device.";
+"RequestCameraAuthText" = "Allow Access to Your Camera";
+"CameraAuthDeniedText" = "Your Camera Access is Denied";
+"CameraAuthAllowedText" = "Your Camera Access Already Allowed";
+"RequestAlbumAuthText" = "Allow Access to Your Photo Album";
+"AlbumAuthDeniedText" = "Your Photo Album Access is Denied";
+"AlbumAutAllowedText" = "YourPhoto Album Access Already Allowed";
+"Go Setting" = "Go Setting";
